cluster/argocd/overlays/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure-private
  routes:
    - match: Host(`argocd.colfax.int`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: traefik-private
        - name: secure-headers
          namespace: traefik-private
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: private-tls
